# ocf-data-sampler

./: .all-contributorsrc  .bumpversion.cfg  .gitignore  .readthedocs.yml  Dakshbir_gsco25.md  MANIFEST.in  README.md  production_icechunk_2024-02_config.yaml  pyproject.toml  requirements.txt  ruff.toml  setup.py  test_loading.py  test_plain_zarr_clean.yaml
.github/workflows/: branch_ci.yml  contribution-bot.yml  lint.yaml  merged_ci.yml  pull_ci.yml  release.yaml  workflows.yaml
notebooks/: data_config_all.yaml  data_config_all_minimal.yaml  datasampler_tensorstore.ipynb
ocf_data_sampler/: constants.py  lightarray.py  time_functions.py  time_utils.py  utils.py
ocf_data_sampler/config/: README.md  __init__.py  load.py  model.py  save.py
ocf_data_sampler/datasets/: pvnet.py
ocf_data_sampler/join/: valid_time_periods.py
ocf_data_sampler/load/: __init__..py  __init__.py  generation.py  gsp.py  icechunk_optimized.py  icechunk_optimized_with_ics.py  load_dataset.py  open_tensorstore_zarrs.py  open_xarray_tensorstore.py  satellite.py  site.py  sites.py  utils.py  xarray_tensorstore.py
ocf_data_sampler/load/nwp/: __init__.py  loaders.py  nwp.py
ocf_data_sampler/numpy_batch/: __init__.py  add_sun_position.py  collate.py  datetime_features.py  gsp.py  nwp.py  satellite.py  site.py  sun_position.py
ocf_data_sampler/numpy_sample/: __init__.py  collate.py  common_types.py  convert.py  converter.py  datetime_features.py  generation.py  gsp.py  nwp.py  satellite.py  site.py  sun_position.py
ocf_data_sampler/sample/: __init__.py  base.py  site.py  uk_regional.py  utils.py
ocf_data_sampler/select/: __init__.py  diff_channels.py  dropout.py  fill_time_periods.py  find_contiguous_t0_time_periods.py  find_contiguous_time_periods.py  geospatial.py  get_indices_in_sorted_unique.py  location.py  select_spatial_slice.py  select_time_slice.py  space_slice_for_dataset.py  spatial_slice_for_dataset.py  time_slice_for_dataset.py
ocf_data_sampler/torch_datasets/: README.md  Readme.md  __init__.py  fastarray.py  process_and_combine.py  pvnet_dataset.py  pvnet_uk_regional.py  site.py  site_premade.py  valid_time_periods.py  xarray_compute.py
ocf_data_sampler/torch_datasets/datasets/: __init__.py  energy_forecast.py  picklecache.py  pvnet_dataset.py  pvnet_uk.py  pvnet_uk_regional.py  site.py
ocf_data_sampler/torch_datasets/sample/: __init__.py  base.py  site.py  uk_regional.py
ocf_data_sampler/torch_datasets/utils/: __init__.py  add_alterate_coordinate_projections.py  benchmark.py  channel_dict_to_dataarray.py  config_normalization_values_to_dicts.py  diff_nwp_data.py  fill_nans.py  merge_and_fill_utils.py  spatial_slice_for_dataset.py  torch_batch_utils.py  (+4 more)
ocf_dataset_alpha/datasets/: pvnet.py
ocf_dataset_alpha/load/: gsp.py  satellite.py
ocf_dataset_alpha/numpy_batch/: __init__.py  add_sun_position.py  gsp.py  nwp.py  satellite.py
ocf_dataset_alpha/select/: find_contiguous_t0_time_periods.py  select_spatial_slice.py  select_time_slice.py
ocf_venv/: pyvenv.cfg
scripts/: benchmark_cli.py  download_gsp_location_data.py  full_dataset_icechunk_conversion.py  production_benchmark_comparison.py  refactor_gsp_or_site_data.py  refactor_site.py
test_data/sample.zarr/: .zmetadata
tests/: conftest.py  constants.py  test_lightarray.py  test_select_time_slice_nwp_mixed.py  test_time_utils.py  test_utils.py
tests/config/: test_config.py  test_load.py  test_save.py
tests/dataset/: test_pvnet.py
tests/load/: conftest.py  test_load_generation.py  test_load_gsp.py  test_load_nwp.py  test_load_satellite.py  test_load_sites.py  test_open_xarray_tensorstore.py
tests/numpy_batch/: test_add_sun_position.py  test_collate.py  test_datetime_features.py  test_gsp.py  test_nwp.py  test_satellite.py  test_sun_position.py
tests/numpy_sample/: test_collate.py  test_datetime_features.py  test_generation.py  test_gsp.py  test_nwp.py  test_satellite.py  test_sun_position.py
tests/select/: conftest.py  test_diff_channels.py  test_dropout.py  test_fill_time_periods.py  test_find_contiguous_t0_time_periods.py  test_find_contiguous_time_periods.py  test_location.py  test_select_spatial_slice.py  test_select_time_slice.py
tests/test_data/: pvnet_test_config.yaml
tests/test_sample/: test_base.py  test_site.py  test_site_sample.py  test_uk_regional.py  test_uk_regional_sample.py  test_utils.py
tests/torch_datasets/: conftest.py  test_fastarray.py  test_merge_and_fill_utils.py  test_process_and_combine.py  test_pvnet_dataset.py  test_pvnet_uk.py  test_pvnet_uk_regional.py  test_site.py  test_site_premade.py  test_time_slice_for_dataset.py  test_validate_channels_utils.py
utils/: compute_icon_mean_stddev.py
(+34 files in other folders)
